fix for overflow

--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -401,7 +401,7 @@
 	}
 	@media (max-width: 767px) {
 		flex-wrap: nowrap;
-		overflow: auto;
+		/*overflow: auto;*/
 		align-items: baseline;
 		.category,
 		.dot,
@@ -483,7 +483,7 @@
 	}
 	@media (max-width: 767px) {
 		display: flex;
-		overflow: auto;
+		/*overflow: auto;*/
 	}
 }
 .videos-section {
